# Code-Snippets

./: .gitignore  CMakeLists.txt  LICENSE  README.md
C# Snippets/Databases/: CRUDExamples.cs  DapperDbAccess.cs  Databases.csproj  SQLQuery.cs  dbsettings.json
C# Snippets/Databases.Tests/: Databases.Tests.csproj  SQLQueryClassTests.cs
C# Snippets/Databases/Database/: ExampleDB.db
C# Snippets/Databases/Databases/: CRUDExamples.cs  Databases.csproj  SQLQuery.cs
C# Snippets/Databases/Databases.Tests/: CRUDExamplesTests.cs  Databases.Tests.csproj  SQLQueryClassTests.cs
C# Snippets/DesignPatterns/: SingletonPattern.cs
C# Snippets/DesignPatterns.Tests/: DesignPatterns.Tests.csproj  TestsSingletonPattern.cs
C# Snippets/Helpers/: Helpers.csproj
C# Snippets/Helpers.Tests/: HashCodeGeneratorTests.cs  Helpers.Tests.csproj
C# Snippets/Helpers/Helpers/: HashCodeGenerator.cs
C# Snippets/Helpers/Helpers.Tests/: HashCodeGeneratorTests.cs
C++ Snippets/: C++ Snippets.cpp  C++ Snippets.h  CMakeLists.txt
Python Snippets/: clean_pycache.py  cov.xml  generate_coverage_report.bat  generatecovreport.bat  measure_sort_performance.py
Python Snippets/Helpers/: Directory.py  File.py
Python Snippets/Tests/: test_Directory.py  test_File.py
Python Snippets/helpers/: directory.py  file.py  mail.py  path.py  regex.py
Python Snippets/helpers/config/: emailsettings-invalidhost.json  emailsettings.json  (+1 more)
Python Snippets/searching/: search.py
Python Snippets/sorting/: __init__.py  common.py  sort.py
Python Snippets/tests/: __init__.py  test_directory.py  test_file.py
(+17 files in other folders)
