# CMakeList.txt : CMake project for C++ Snippets, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "C++ Snippets.cpp" "C++ Snippets.h")

# TODO: Add tests and install targets if needed.
